# nmigen

./: .travis.yml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
examples/: platform.py
latest/: .buildinfo  cover.html  genindex.html  index.html  install.html  intro.html  lang.html  objects.inv  search.html  start.html  tutorial.html
latest/.doctrees/: environment.pickle
latest/_static/: documentation_options.js
nmigen/: _utils.py  cli.py  tools.py
nmigen/back/: rtlil.py  verilog.py
nmigen/hdl/: ast.py  ir.py
nmigen/lib/: cdc.py  fifo.py  io.py
nmigen/test/: test_build_platform.py
