[metadata]
name = nmigen
author = whitequark
author-email = whitequark@whitequark.org
home-page = https://github.com/m-labs/nmigen
summary = Python toolbox for building complex digital hardware
keywords =
    HDL
    ASIC
    FPGA hardware design
classifiesr =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
projects_urls =
    Source Code = https://github.com/m-labs/nmigen
    Bug Tracker = https://github.com/m-labs/nmigen/issues
python_requires = ~=3.6,~=3.7

[files]
packages = nmigen
