[metadata]
name = nmigen
author = whitequark
author-email = whitequark@whitequark.org
home-page = https://github.com/m-labs/nmigen
summary = Python toolbox for building complex digital hardware
keywords =
    HDL
    ASIC
    FPGA hardware design
classifiesr =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
projects_urls =
    Source Code = https://github.com/nmigen/nmigen
    Bug Tracker = https://github.com/nmigen/nmigen/issues
python_requires = ~=3.6

[files]
packages = nmigen

[bdist_wheel]
universal = 1

[flake8]
ignore =
    F405
    W504
    E501
    F403
exclude = __init__.py
