[metadata]
name = nmigen
author = whitequark
author-email = whitequark@whitequark.org
home-page = https://github.com/m-labs/nmigen
summary = Python toolbox for building complex digital hardware
version = attr: nmigen._version.version

keywords =
    HDL
    ASIC
    FPGA hardware design
classifiesr =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Environment :: Console
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
projects_urls =
    Source Code = https://github.com/nmigen/nmigen
    Bug Tracker = https://github.com/nmigen/nmigen/issues
python_requires = ~=3.6

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<'3.8'
    importlib_resources;python_version<'3.9'
    pyvcd~=0.2.2
    Jinja2~=2.11

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
builtin-yosys = nmigen-yosys>=0.9.post3527.*
remote-build = paramiko~=2.7

[bdist_wheel]
universal = 1

[flake8]
ignore =
    F405
    W504
    E501
    F403
exclude = __init__.py
